[package]
name = "netflow_collector"
version = "0.1.0"
authors = ["Kris <kris@catdamnit.com>"]

[dependencies]
tokio-core = "0.1.18"
futures = "0.1.30"
futures-cpupool = "0.1.8"
time = "0.2.23"
clap = "2.33.3"
syslog = "~3.3.0"
#netflow_v9 = { git = "https://github.com/Caspinol/netflow_v9" }
ipfix = { git = "https://github.com/skoky/rs-ipfix" }
